* Fix queue panel in .72+ * Fix playlist page sort button in .68+ (position) / .70+ (order) / .72+ (docking when scrolled - cssmap change) * Fix NPV sidebar text contrast with canvas enabled in .72+

--- a/theme/src/controls/button.scss
+++ b/theme/src/controls/button.scss
@@ -60,6 +60,14 @@ header nav li,
   padding: 0;
 }
 
+.playlist-playlist-searchBoxContainer {
+  align-items: initial;
+}
+
+.playlist-playlist-searchBoxContainer > div:has(button.x-sortBox-sortDropdown) {
+  order: -1;
+}
+
 button.x-sortBox-sortDropdown,
 button[aria-controls="sort-and-view-picker"] {
   color: var(--spice-text);
