--- a/theme/src/panels/npv.scss
+++ b/theme/src/panels/npv.scss
@@ -59,7 +59,8 @@
                 }
             }
 
-            .pUIBQ9cykHKYx2A2ZIPA {
+            .pUIBQ9cykHKYx2A2ZIPA,
+            .XixZ4ftG53tYcM4KohE1 { /* .72+ */
                 + div, + div + div {
                     .main-nowPlayingView-trackInfo {
                         a, span {
